# horndb

./: .dockerignore  .gitignore  .gitmodules  .graphifyignore  .pre-commit-config.yaml  AGENTS.md  BENCHMARKS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  TASKS.md  initial-research.md
crates/bench-rdfox/: Cargo.toml
crates/bench-rdfox/src/: main.rs
crates/bench-trainmarks/: Cargo.toml
crates/bench-trainmarks/src/: main.rs
crates/closure/: AGENTS.md  Cargo.toml  INTEGRATION-NOTES.md  build.rs  wrapper.h
crates/closure/benches/: closure_retraction.rs  crosswalk.rs  incremental.rs  sameas.rs  transitive.rs  valued_readiness.rs
crates/closure/src/: bindings.rs  crosswalk.rs  dense_id.rs  error.rs  ffi.rs  grb.rs  lib.rs  metrics.rs  sameas.rs  sink.rs  types.rs
crates/closure/tests/: build_shared.rs  crosswalk.rs  dense_id.rs  differential.rs  end_to_end.rs  grb_smoke.rs  incremental.rs  incremental_retraction.proptest-regressions  incremental_retraction.rs  metrics_sink.rs  retraction_output_sensitive.rs  retraction_strategies_differential.rs  sameas.rs  schema_closure.rs  transitive_closure.rs  valued_closure.rs
crates/harness/: AGENTS.md  Cargo.toml  README.md  selected.toml
crates/harness/scenarios/: spb-nightly.properties
crates/harness/scripts/: bootstrap-graphdb-free-spb.sh  bootstrap-oxigraph-spb.sh  bootstrap-rdfox-spb.sh  fetch-ldbc-spb.sh  fetch-ore2015-subset.sh  fetch-w3c-suites.sh  run-graphdb-free-spb-256.sh  run-oxigraph-spb-256.sh  run-rdfox-spb-256.sh  run-spb-256.sh  start-engine.sh  start-graphdb-free.sh  start-oxigraph.sh  wait-for-sparql.sh
crates/harness/src/: ci.rs  db.rs  ldbc_spb.rs  lib.rs  manifest.rs  ore.rs  outcome.rs  owl2_rl_extract.rs  owlrl_engine.rs  rdf.rs  reasoner.rs  report.rs  runner.rs  selected.rs  sssom_loader.rs  stub.rs  testcase.rs
crates/harness/tests/: cli_smoke.rs  manifest_parse.rs  w3c_subset.rs
crates/incremental/: AGENTS.md  Cargo.toml  FUTURE-WORK.md
crates/incremental/benches/: insert_throughput.rs  retraction_throughput.rs
crates/incremental/src/: change_feed.rs  checkpoint.rs  circuit.rs  closure_plan.rs  delta_log.rs  lib.rs  operator.rs  snapshot.rs  types.rs  zset.rs
crates/incremental/tests/: acceptance_change_feed.rs  acceptance_differential.proptest-regressions  acceptance_differential.rs  bilinear_correctness.rs  change_feed.rs  checkpoint.rs  circuit_tick.rs  closure_deltas.rs  closure_deltas_differential.rs  closure_retraction.rs  delta_log.rs  fixtures_smoke.rs  incremental_rule_retraction.rs  linear_rule.rs  metrics.rs  nary_plan.rs  retraction.rs  retraction_closure.rs  snapshot.rs  zset_basic.rs  zset_props.rs
crates/metrics/: Cargo.toml
crates/metrics/benches/: overhead.rs
crates/metrics/src/: closure.rs  incremental.rs  labels.rs  lib.rs  ml.rs  owlrl.rs  simd.rs  sparql.rs  storage.rs  wcoj.rs
crates/ml/: Cargo.toml  INTEGRATION-NOTES.md
crates/ml/src/: audit.rs  candidate.rs  config.rs  hotset.rs  lib.rs  nlquery.rs  planner.rs  provenance.rs  registry.rs  types.rs
crates/ml/tests/: audit_pagination.rs  disabled_is_identity.rs  http_boundary.rs  registry_hot_reload.rs
crates/owlrl/: AGENTS.md  Cargo.toml  INTEGRATION-NOTES.md  build.rs  rules.toml
crates/owlrl/benches/: eq_rep_p_skew.rs  rdf_type_skew.rs
crates/owlrl/codegen/: emit.rs  mod.rs  parse.rs  plan.rs  vocab.rs
crates/owlrl/src/: backend.rs  datatype_literals.rs  datatype_ranges.rs  datatypes.rs  delta.rs  engine.rs  eq_rep_p_opt.rs  graphblas_backend.rs  integration.rs  lib.rs  list_rules.rs  provenance.rs  sssom.rs  store.rs  types.rs  vocab.rs
crates/owlrl/tests/: closure_backend_differential.rs  codegen_smoke.rs  datatype_literals.rs  datatype_range_intersection.rs  datatype_subsumption.rs  eq_rep_p_differential.rs  metrics.rs  proof_tree.rs  rdf_type_skew_differential.rs  reset_rematerialize.rs  semi_naive.rs  single_rule.rs  sssom_identity_isolation.rs  sssom_negative.rs  sssom_rules.rs  w3c_subset.rs
crates/python/: .gitignore  CLAUDE.md  Cargo.toml  README.md  pyproject.toml
crates/python/src/: graph.rs  lib.rs  py.rs  quadstore.rs  store_py.rs  term.rs
crates/python/tests/: test_native_store.py  test_rdflib_compat.py
crates/simd/: AGENTS.md  Cargo.toml  simd-research-findings.md
crates/simd/benches/: filter_indices.rs  gather.rs  intersect.rs  lower_bound.rs
crates/simd/src/: calibrate.rs  cpu.rs  dedup.rs  dispatch.rs  filter.rs  filter_indices.rs  gather.rs  intersect.rs  lib.rs  lower_bound.rs  merge.rs  scalar.rs
crates/simd/tests/: calibration.rs  calibration_off.rs  differential.rs  env_cap.rs  skew_intersect.rs
crates/sparql/: AGENTS.md  Cargo.toml  INTEGRATION-NOTES.md  README.md
crates/sparql/examples/: agg_profile.rs
crates/sparql/src/: api.rs  error.rs  lib.rs  parser.rs  update.rs
crates/sparql/tests/: algebra_translate.rs  algebra_types.rs  api_end_to_end.rs  exec_aggregate.rs  exec_ask.rs  exec_construct.rs  exec_describe.rs  exec_expressions.rs  exec_filter_ops.rs  exec_horn.rs  exec_leftjoin.rs  exec_mem.rs  exec_property_paths.rs  exec_select.rs  exec_values.rs  explain_pragma.rs  horn_load_hammer.rs  latency_smoke.rs  logical_pipeline.rs  metrics_endpoint.rs  metrics_pipeline.rs  parse_smoke.rs  parser_basic.rs  planner_smoke.rs  regime.rs  results_json.rs  results_streaming.rs  rewrite_invariance.rs  server_http.rs  trainmarks_smoke.rs  update_graph_mgmt.rs  update_insert_delete.rs  update_where.rs  w3c_suite.rs
crates/storage/: Cargo.toml  INTEGRATION-NOTES.md  STAGE1-ACCEPTANCE.md
crates/storage/benches/: dict_decode.rs  insert_retract.rs  load_lubm.rs  partition_scan.rs
crates/storage/src/: dictionary.rs  error.rs  lib.rs  memory_tier.rs  ordering.rs  partition.rs  store.rs  term.rs  tier.rs  visibility.rs
crates/storage/tests/: dictionary.rs  dictionary_proptest.rs  mvcc_delete.rs  nquads_loader.rs  ntriples_loader.rs  partition.rs  six_orderings.rs  snapshot_footprint.rs  snapshot_isolation.rs  snapshot_roundtrip.rs  store_roundtrip.rs  turtle_loader.rs
crates/wcoj/: AGENTS.md  Cargo.toml  INTEGRATION-NOTES.md
(+607 files in other folders)
