[workspace]
resolver = "2"
members = [
    "crates/simd",
    "crates/harness",
    "crates/storage",
    "crates/wcoj",
    "crates/owlrl",
    "crates/closure",
    "crates/incremental",
    "crates/sparql",
    "crates/ml",
    "crates/hardware-ext",
    "crates/bench-rdfox",
    "crates/metrics",
]
# harness and bench-rdfox are excluded from default builds to avoid pulling in
# oxigraph → oxrocksdb-sys (~700 MB) during local development. Use --workspace
# in CI or pass -p horndb-harness explicitly to include them.
default-members = [
    "crates/simd",
    "crates/storage",
    "crates/wcoj",
    "crates/owlrl",
    "crates/closure",
    "crates/incremental",
    "crates/sparql",
    "crates/ml",
    "crates/hardware-ext",
    "crates/metrics",
]

[workspace.package]
# Single source of truth for every member crate's version (each crate sets
# `version.workspace = true`). Bumped on merge by the `bump-*` PR label via
# scripts/bump-version.py + .github/workflows/bump-version-on-merge.yml, then
# tagged `vX.Y.Z` by tag-version.yml. `crates/python` is deliberately outside
# this workspace, so it keeps its own version.
version = "0.1.0"
edition = "2021"
rust-version = "1.87"
license = "Apache-2.0"
repository = "https://github.com/sunstoneinstitute/horndb"
authors = ["Sunstone Institute"]

[workspace.dependencies]
# Internal leaf crate (SPEC-12). Consumers reference it with
# `horndb-simd = { workspace = true }`.
horndb-simd = { path = "crates/simd" }
horndb-metrics = { path = "crates/metrics" }
prometheus-client = "0.25"
anyhow = "1"
thiserror = "2"
crossbeam-channel = "0.5"
rayon = "1"
proptest = "1"
criterion = { version = "0.8", default-features = false, features = ["html_reports"] }
serde = { version = "1", features = ["derive"] }
toml = "1.1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Pinned to 0.31: rusqlite 0.40 pulls libsqlite3-sys 0.38.0, whose build.rs
# uses the still-unstable `cfg_select!` macro and fails to build on any stable
# Rust (verified 1.88 / 1.90 / 1.93). Revert this pin once a fixed
# libsqlite3-sys (>0.38.0) ships. See the dependabot bump in git history.
rusqlite = { version = "0.31", features = ["bundled"] }
oxrdf = { version = "0.3", features = ["rdf-12"] }
oxrdfio = { version = "0.2", features = ["rdf-12"] }
oxttl = { version = "0.2", features = ["rdf-12"] }
oxigraph = { version = "0.5", features = ["rdf-12"] }
sparesults = { version = "0.3", features = ["sparql-12"] }
quick-xml = { version = "0.41", features = ["serialize"] }
walkdir = "2"
sha2 = "0.11"
hex = "0.4"
time = { version = "0.3", features = ["formatting", "serde", "macros"] }
serde_json = "1"
assert_cmd = "2"
predicates = "3"
insta = { version = "1", features = ["yaml"] }
tempfile = "3"
arrow = { version = "59", default-features = false }
roaring = "0.11"
dashmap = "6"
parking_lot = "0.12"
bytemuck = { version = "1", features = ["derive"] }
spargebra = "0.4"
regex = "1"
axum = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower = "0.5"
hyper = "1"
pretty_assertions = "1"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
debug = 1

[profile.bench]
inherits = "release"
