[package]
name = "horndb-bench-rdfox"
version = "0.0.0"
edition.workspace = true
license.workspace = true
publish = false

# Internal benchmarking glue: a HornDB-side micro-runner driven by
# `scripts/bench/compare-rdfox.sh` so the same input files can be timed
# through HornDB and RDFox. Not part of the engine; not shipped.

[[bin]]
name = "horndb-bench"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
oxrdf = { workspace = true }
oxttl = { workspace = true }
horndb-storage = { path = "../storage" }
horndb-closure = { path = "../closure" }
horndb-owlrl = { path = "../owlrl" }
