[package]
name = "horndb-closure"
version = "0.0.0"
edition.workspace = true
license.workspace = true
publish = false
links = "graphblas"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
rustc-hash = "2"

[build-dependencies]
bindgen = "0.69"
pkg-config = "0.3"

[dev-dependencies]
anyhow = { workspace = true }
criterion = { version = "0.5", features = ["html_reports"] }
rand = { version = "0.8", features = ["small_rng"] }

[[bench]]
name = "transitive"
harness = false

[[bench]]
name = "sameas"
harness = false
