[package]
name = "horndb-closure"
version = "0.0.0"
edition.workspace = true
license.workspace = true
publish = false
links = "graphblas"

[features]
default = ["vendored", "openmp"]
# Build the vendored SuiteSparse:GraphBLAS submodule from source.
vendored = ["dep:cmake", "dep:fs4"]
# Build GraphBLAS with OpenMP support.
openmp = []
# Regenerate the FFI bindings via bindgen instead of using the checked-in src/bindings.rs.
regen-bindings = ["dep:bindgen"]

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
rustc-hash = "2"

[build-dependencies]
bindgen = { version = "0.69", optional = true }
pkg-config = "0.3"
cmake = { version = "0.1", optional = true }
# Advisory file lock (flock on unix) used to serialise the shared GraphBLAS
# build across worktrees. Default features include the `sync` std-File impl.
fs4 = { version = "1.1", optional = true }

[dev-dependencies]
anyhow = { workspace = true }
criterion = { version = "0.8", features = ["html_reports"] }
proptest = { workspace = true }
rand = { version = "0.9", features = ["small_rng"] }

[[bench]]
name = "transitive"
harness = false

[[bench]]
name = "sameas"
harness = false

[[bench]]
name = "incremental"
harness = false

[[bench]]
name = "valued_readiness"
harness = false
