[package]
name = "horndb-harness"
version = "0.0.0"
edition.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "harness"
path = "src/bin/harness.rs"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rusqlite = { workspace = true }
oxrdf = { workspace = true }
oxrdfio = { workspace = true }
oxttl = { workspace = true }
oxigraph = { workspace = true }
# SPARQL 1.1 syntax suite: grade positive/negative syntax cases by parse
# accept/reject with the same grammar the SPEC-07 engine uses. The
# `sep-0006`/`sparql-12` features match `horndb-sparql` so the harness and the
# engine accept exactly the same surface (see crates/sparql/Cargo.toml).
spargebra = { workspace = true, features = ["sep-0006", "sparql-12"] }
sparesults = { workspace = true }
quick-xml = { workspace = true }
walkdir = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
time = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }

[dependencies.horndb-owlrl]
path = "../owlrl"
optional = true

[features]
default = []
real-engine = ["dep:horndb-owlrl"]

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
insta = { workspace = true }
tempfile = { workspace = true }
