[package]
name = "horndb-incremental"
version = "0.0.0"
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
crossbeam-channel.workspace = true
horndb-closure = { path = "../closure" }

[dev-dependencies]
proptest.workspace = true
criterion.workspace = true

[[bench]]
name = "insert_throughput"
harness = false
