[package]
name = "horndb-incremental"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
crossbeam-channel.workspace = true
horndb-closure = { path = "../closure" }
horndb-metrics.workspace = true

[dev-dependencies]
proptest.workspace = true
criterion.workspace = true

[[bench]]
name = "insert_throughput"
harness = false
