[package]
name = "horndb-metrics"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
prometheus-client.workspace = true

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "overhead"
harness = false
