[package]
name = "reasoner-ml"
version = "0.0.0"
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }

[dev-dependencies]
# Tests use only std + chrono; nothing extra needed at Stage 1.
