[package]
name = "horndb-owlrl"
version = "0.0.0"
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
# rdf-star is enabled here because workspace deps (oxttl, oxrdfio,
# oxigraph) all activate it transitively. Cargo's feature unification
# means the variant appears in `SubjectRef` / `TermRef` whether or not
# we ask for it, so we declare it explicitly to keep our match arms in
# sync. The Stage-1 OWL 2 RL slice rejects triple-term inputs; lifting
# that is a SPEC-04 + RDF 1.2 migration task (see TASKS.md HIGH).
oxrdf = { workspace = true, features = ["rdf-star"] }
rustc-hash = "2"
smallvec = "1.13"

[build-dependencies]
anyhow = { workspace = true }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
prettyplease = "0.2"

[dev-dependencies]
anyhow = { workspace = true }
