[package]
name = "horndb-owlrl"
version = "0.0.0"
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
# Stage-1 keeps `rdf-12` (oxrdf 0.3's RDF 1.2 / triple-term feature) OFF.
# The OWL 2 RL engine rejects triple-term inputs; lifting that is the
# Stage-2 PR2 of the RDF 1.2 migration (see TASKS.md HIGH and CLAUDE.md).
# Match arms in `src/integration.rs` against `SubjectRef::Triple` /
# `TermRef::Triple` are guarded by a catch-all so the code compiles both
# with and without the feature.
oxrdf = { workspace = true }
rustc-hash = "2"
smallvec = "1.13"

[build-dependencies]
anyhow = { workspace = true }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
prettyplease = "0.2"

[dev-dependencies]
anyhow = { workspace = true }
proptest = { workspace = true }
criterion = { workspace = true }

# Dev binary for inspecting the build-time-generated rule code.
# See crates/owlrl/AGENTS.md and crates/owlrl/CONTRIBUTING-RULES.md.
[[bin]]
name = "show-rule"
path = "src/bin/show_rule.rs"

[[bench]]
name = "eq_rep_p_skew"
harness = false
