[package]
name = "horndb-simd"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "intersect"
harness = false

[[bench]]
name = "lower_bound"
harness = false

[[bench]]
name = "gather"
harness = false

[[bench]]
name = "filter_indices"
harness = false
