[package]
name = "horndb-sparql"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[features]
default = ["server"]
server = ["dep:axum", "dep:tokio", "dep:tower", "dep:hyper"]

[dependencies]
# `sep-0006` enables spargebra's `GraphPattern::Lateral` variant. The
# workspace's oxigraph dependency activates it transitively elsewhere,
# so requesting it here keeps `-p horndb-sparql` matches exhaustive
# under all feature configurations.
#
# `sparql-12` enables RDF 1.2 triple-term `TermPattern::Triple` and
# transitively activates `oxrdf/rdf-12`. The SPARQL translator routes
# triple-term patterns at runtime through `SparqlConfig::rdf12`; the
# default config rejects them so SPARQL 1.1 clients keep their semantics.
spargebra = { workspace = true, features = ["sep-0006", "sparql-12"] }
oxrdf = { workspace = true }
sparesults = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
tower = { workspace = true, optional = true }
hyper = { workspace = true, optional = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
insta = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
