[package]
name = "horndb-sparql"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[features]
default = ["server", "reasoner"]
server = ["dep:axum", "dep:tokio", "dep:tower", "dep:hyper"]
reasoner = ["dep:horndb-owlrl"]

[dependencies]
# `sep-0006` enables spargebra's `GraphPattern::Lateral` variant. The
# workspace's oxigraph dependency activates it transitively elsewhere,
# so requesting it here keeps `-p horndb-sparql` matches exhaustive
# under all feature configurations.
#
# `sparql-12` enables RDF 1.2 triple-term `TermPattern::Triple` and
# transitively activates `oxrdf/rdf-12`. The SPARQL translator routes
# triple-term patterns at runtime through `SparqlConfig::rdf12`; the
# default config rejects them so SPARQL 1.1 clients keep their semantics.
spargebra = { workspace = true, features = ["sep-0006", "sparql-12"] }
oxrdf = { workspace = true }
sparesults = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
# SPARQL REGEX/REPLACE builtins (`exec::runtime::compile_regex`).
regex = { workspace = true }
axum = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
tower = { workspace = true, optional = true }
hyper = { workspace = true, optional = true }
# Used only by the `serve` binary (gated on the `server` feature). Kept
# non-optional for simplicity — they are small, pure-Rust deps and the
# library code does not reference them.
oxttl = { workspace = true }
clap = { workspace = true }
horndb-owlrl = { path = "../owlrl", optional = true }
horndb-storage = { path = "../storage" }
horndb-wcoj = { path = "../wcoj" }
horndb-metrics.workspace = true
arrow = { workspace = true }

[[bin]]
name = "serve"
path = "src/bin/serve.rs"
# The server (axum/tokio) lives behind the `server` feature; the binary
# cannot build without it.
required-features = ["server"]

[dev-dependencies]
pretty_assertions = { workspace = true }
insta = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
