[package]
name = "horndb-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
arrow.workspace = true
roaring.workspace = true
dashmap.workspace = true
parking_lot.workspace = true
bytemuck.workspace = true
oxttl.workspace = true
oxrdf.workspace = true
horndb-simd = { workspace = true }

[dev-dependencies]
tempfile.workspace = true
proptest.workspace = true
criterion.workspace = true

[[bench]]
name = "load_lubm"
harness = false

[[bench]]
name = "dict_decode"
harness = false

[[bench]]
name = "partition_scan"
harness = false

[[bench]]
name = "insert_retract"
harness = false
