[package]
name = "horndb-wcoj"
version = "0.0.0"
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
arrow = "53"

[dev-dependencies]
proptest = "1"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "four_cycle"
harness = false

[[bench]]
name = "per_tuple"
harness = false
