[package]
name = "horndb-wcoj"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
arrow = { workspace = true }

[dev-dependencies]
proptest = "1"
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "four_cycle"
harness = false

[[bench]]
name = "per_tuple"
harness = false
